--- a/griffithsm/css/styles.css
+++ b/griffithsm/css/styles.css
@@ -4,18 +4,18 @@
 
 /* Global Styles */
 html {
-    font-size: 16px;
-    color: #333;
-    font-family: Roboto, sans-serif;
+    font-size: 17px;
+    color: #c78bb8;
+    font-family: Georgia, 'Times New Roman', Times, serif, sans-serif;
     scroll-behavior: smooth;
 }
 
 body {
-    background-color: #FFF;
+    background-color: #9b95ed;
     margin: 1% auto;
     width: 90%;
-    max-width: 57rem;
-    font-weight: 400;
+    max-width: 58rem;
+    font-weight: 350;
     font-size: 1rem;
     line-height: 1.3;
 }
@@ -28,14 +28,14 @@ main {
 
 h1 {
 
-font-family: Oswald, sans-serif;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, sans-serif;
 font-size:4rem;
 
 }
 
 h2 {
 
-    font-family: Oswald, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, sans-serif;
     font-size:2rem;
 
 }
