--- a/sesserh/blog/css/styles.css
+++ b/sesserh/blog/css/styles.css
@@ -13,12 +13,16 @@ html {
 body {
   background-color: #fafafa;
   margin: 2rem auto;
-  padding: 1.5rem;
+  padding: 1rem;
   width: 90%;
   max-width: 60rem;
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.6;
+}
+
+main {
+  margin-bottom: 3rem;
 }
 
 /* Headings */
@@ -41,14 +45,6 @@ h2 {
 h3 {
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
-}
-
-/* Ordered List */
-ol {
-  margin-top: 0;
-  padding-left: 0;
-  list-style-type: none;
-  font-size: 0.875rem;
 }
 
 /* Navigation Styling */
@@ -74,4 +70,12 @@ nav ul li a {
 
 nav ul li a:hover {
   background-color: #0a9396;
+}
+
+/* Ordered List */
+ol {
+  margin-top: 0;
+  padding-left: 0;
+  list-style-type: none;
+  font-size: 0.875rem;
 }
