--- a/furuci/css/styles.css
+++ b/furuci/css/styles.css
@@ -14,20 +14,18 @@ html {
 
 }
 
-.page-header {
-
-  background: #FFC0CB url(../images/flowersss.jpg) center/cover no-repeat;
+.page-header { 
+ background:#FFB6C1 url(../images/flowersss.jpg) center/cover no-repeat;
   background-blend-mode: overlay;
-  background-size: 35rem
-  color:#FFF;
+  color:#D9027D;
   padding:1rem;
-  max width: 35rem;
-
- 
-
-}
+  font-family: Roboto, sans-serif; 
+  text-orientation: center;
+  overflow: hidden;
 
 
+
+ }
 body {
 
     background-color: #ffffff;
@@ -43,23 +41,37 @@ body {
 }
 main {
 
-    margin-bottom:20 px;
-    margin-left: 20px;
-    margin-right: 20px; 
+    margin-bottom:0 px;
+}  
 
+#main-nav {
+
+  grid-column: 4 / 12;
+  grid-row: 2 / 3;
+  display:flex;
+  justify-content: space-evenly;
+  align-items:center;
 
 }
 
-#main-nav a> {
-     text-decoration: none;
-    color:#D9027D;
-    font-size:2.5vw;
-    font-weight:400;
-    padding:.75rem;
+#main-nav a {
 
+  font-size:1rem;
+  font-weight:600;
+  font-size: 1rem;
 
+}
 
-} 
+ .logo {
+    display: block;
+    margin: 0 auto;
+    max-width: 70px;
+    position: absolute;
+    top: 10px; 
+    height: auto;
+    image:url(../images/Isabella Furuc);
+  }
+
 
 h1 {
     color: #D9027D;
@@ -107,6 +119,23 @@ img {
     image-orientation: center;
 
 } 
+
+.image-bar {
+    display: flex;
+    justify-content: center; /* Centers images */
+    gap: 15px; /* Adds space between images */
+    padding: 10px;
+    background-color: #F8C8DC; 
+    text-align: center;/* Optional background */
+}
+
+.image-bar img {
+    width: 70px; /* Adjust image size */
+    height: auto;
+    border-radius: 5px;
+    align-items: center; /* Optional rounded edges */
+}
+
 
 
 
