--- a/mcialwainc/css/styles.css
+++ b/mcialwainc/css/styles.css
@@ -4,14 +4,14 @@
 
 /* Global Styles */
 html {
-    font-size: 16px;
+    font-size: 18px;
     color: #333;
     font-family: Roboto, sans-serif;
     scroll-behavior: smooth;
 }
 
 body {
-    background-color: #FFF;
+    background-color: #eb4646;
     margin: 1% auto;
     width: 90%;
     max-width: 57rem;
