--- a/furuci/blog/css/styles blog.css
+++ b/furuci/blog/css/styles blog.css
@@ -4,31 +4,34 @@
 
 /* Global Styles */
 
-html {
+html{
     font-size: 16px;
     color: #000000;
     font-family: Roboto, sans-serif;
     scroll-behavior: smooth;
-    background-color:#ffffff ;
-
-
+    background-color:#ffffff;
 }
 
 .page-header { 
- background:#FFB6C1 url(../images/flowersss.jpg) center/cover no-repeat;
-  background-blend-mode: overlay;
   color:#D9027D;
   padding:1rem;
   font-family: Roboto, sans-serif; 
   text-orientation: center;
   overflow: hidden;
+  text-decoration: none;
+
+.centered-title {
+  text-align: center;
+}
 
 
 
- }
-body {
 
+
+body{
     background-color: #ffffff;
+    background:#FFB6C1 url(../images/background heart.png) center/cover no-repeat;
+  background-blend-mode: overlay;
     margin: 1% auto;
     width: 100%;
     max-width: 50rem;
@@ -37,21 +40,20 @@ body {
     line-height: 1.3;
     padding-top: 0;
     padding-left: 1;
-    padding-right: 1;   
+    padding-right: 1; 
 }
-main {
 
+main{
     margin-bottom:0 px;
 }  
 
-#main-nav {
+#main-nav{
 
   grid-column: 4 / 12;
   grid-row: 2 / 3;
   display:flex;
   justify-content: space-evenly;
   align-items:center;
-
 }
 
 #main-nav a {
@@ -62,15 +64,12 @@ main {
 
 }
 
- .logo {
-    display: block;
-    margin: 0 auto;
-    max-width: 70px;
-    position: absolute;
-    top: 10px; 
-    height: auto;
-    image:url(../images/Isabella Furuc);
-  }
+header {
+  position: relative;
+  padding: 10px;
+  te
+}
+
 
 
 h1 {
@@ -103,34 +102,9 @@ ol {
 
 }
 
-dl {
-
-    margin-top:0;
-    margin-bottom: 1.5rem;
-    padding-left:1;
-    padding-right: 1;
-    list-style-type: none;
-    font-size:.875rem;
-
-} 
 img {
     width: 35%;
     max-width: 30rem;
     image-orientation: center;
 
 } 
-
-.image-bar {
-    display: flex;
-    justify-content: center; /* Centers images */
-    gap: 15px; /* Adds space between images */
-    padding: 10px;
-    background-color: #F8C8DC; /* Optional background */
-}
-
-.image-bar img {
-    width: 70px; /* Adjust image size */
-    height: auto;
-    border-radius: 5px;
-    align: center img /* Optional rounded edges */
-}
