--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,54 +1,252 @@
 /* Importing Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Karantina:wght@300;400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* Global Styles */
 html {
     font-size: 16px;
     color: #333;
-    font-family: Roboto, sans-serif;
-    scroll-behavior: smooth;
+    font-family: Poppins, sans-serif;
 }
 
 body {
     background-color: #FFF;
     margin: 1% auto;
     width: 90%;
-    max-width: 57rem;
+    max-width: 59rem;
     font-weight: 400;
     font-size: 1rem;
-    line-height: 1.3;
+    line-height: 1.6;
 }
 
-main {
-
-    margin-bottom:3rem;
-
+h1, h2, h3 {
+    font-family: Oswald, sans-serif;
 }
 
 h1 {
+    font-size: 6rem;
+    margin-bottom: 0;
+}
 
-font-family: Oswald, sans-serif;
-font-size:4rem;
+h1 span {
 
+    color:rgb(150, 40, 62);
 }
 
 h2 {
-
-    font-family: Oswald, sans-serif;
-    font-size:2rem;
-
-}
-h3 {
-    font-size:1.5rem;
-    margin-bottom:.5rem;
+    font-size: 2rem;
+    letter-spacing: .125rem;
+    text-transform: uppercase;
 }
 
-ol {
+#banner {
 
-    margin-top:0;
-    padding-left:0;
+width:100%;
+margin-top:1.5rem;
+margin-bottom:1rem;
+
+}
+
+#banner img {
+
+    width:100%; 
+    display:block;
+}
+
+main {
+    margin:0;
+}
+
+p {
+    font-size: .875rem;
+}
+
+/* Container for the portfolio section */
+.portfolio ul {
+    display: grid;
+    grid-template-columns: repeat(5, auto); /* 3 columns, adjust as necessary */
+    gap: 20px;
+    justify-content: space-between;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.portfolio li {
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+}
+
+.card {
+    width: 150px;
+    height: 150px;
+    perspective: 1000px; /* Creates a 3D effect */
+}
+
+.card a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+}
+
+.card-front, .card-back {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    backface-visibility: hidden; /* Hides the back when flipped */
+    transition: transform 0.5s ease, background-color 0.5s, color 0.5s;
+}
+
+.card-front {
+    background-color: rgb(220, 220, 220);
+    color: rgb(46, 134, 171);
+}
+
+.card-back {
+    background-color: #333;
+    color: white;
+    transform: rotateY(180deg); /* Start with the back side hidden */
+}
+
+.card:hover .card-front {
+    transform: rotateY(180deg); /* Flips the front when hovered */
+}
+
+.card:hover .card-back {
+    transform: rotateY(360deg); /* Flips the back */
+    background-color: rgb(150, 40, 62); /* Change the background on hover */
+    color: #fff; /* Change text color on hover */
+}
+
+
+/* Header Styles */
+header {
+    display: grid;
+    justify-content: start;
+}
+
+header p {
+    margin-top: -1rem;
+    text-align: right;
+    font-size: 1rem;
+}
+
+/* Navigation Styles */
+nav {
+    margin-top: .75rem;
+}
+
+nav ul {
+    padding: 0;
+    margin: 0;
     list-style-type: none;
-    font-size:.875rem;
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+	justify-content: space-between;
+}
 
+nav a {
+    font-size: 1.25rem;
+    text-decoration: none;
+    color:rgb(46, 134, 171);
+    font-weight: 500;
+    display: inline-block;
+    transition: color 0.3s ease;
+}
+
+nav a span {
+    display: inline-block;
+    transition: transform 0.3s ease;
+}
+
+/* On hover */
+nav a:hover span:nth-child(odd) {
+    transform: rotate(4deg);
+    color: rgb(47, 79, 79);
+    text-decoration: underline;
+	text-underline-offset:.5rem;
+}
+
+nav a:hover span:nth-child(even) {
+    transform: rotate(-4deg);
+    color: rgb(47, 79, 79);
+    text-decoration: underline;
+	text-underline-offset:.5rem;
+}
+
+/* On active class (when the link is clicked) */
+nav a.active span:nth-child(odd) {
+    transform: rotate(4deg);
+    color: rgb(47, 79, 79);
+    text-decoration: underline;
+	text-underline-offset:.5rem;
+}
+
+nav a.active span:nth-child(even) {
+    transform: rotate(-4deg);
+    color: #2f4f4f;
+    text-decoration: underline;
+	text-underline-offset:.5rem;
+}
+
+/* Footer Styles */
+footer {
+    margin-top: 4rem;
+    border-top:2px solid #333;
+    display:grid;
+    grid-template-columns: repeat(3, auto);
+    justify-content: space-between;
+}
+
+footer a {
+    text-decoration: underline;
+    color: #2E86AB;
+}
+
+footer a:hover {
+    color: #2f4f4f;
+}
+
+@media screen and (min-width:693px) and (max-width:1038px) {
+    body {
+        max-width: 39rem;
+    }
+
+    h1 {
+        font-size:4rem;
+    }
+
+    .portfolio ul {
+        grid-template-columns: repeat(4, auto);
+    }
+
+    footer {
+        grid-template-columns: repeat(2, auto);
+    }
+}
+
+@media screen and (min-width:515px) and (max-width:692px) {
+
+    body {
+
+        max-width:29rem;
+    }
+
+    h1 {
+        font-size: 2.975rem;
+    }
+
+    .portfolio ul {
+        grid-template-columns: repeat(3, auto);
+    }
+
+    footer {
+        grid-template-columns: repeat(1, auto);
+    }
 }
